--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -269,12 +269,12 @@
             //     allowClose: false
             // });
 
-            // nthTabs.addTab({
-            //     id: "inventory_move",
-            //     title: '库存移动',
-            //     url: "/inventory/move",
-            //     allowClose: false
-            // });
+            nthTabs.addTab({
+                id: "inventory_move",
+                title: '库存移动',
+                url: "/inventory/move",
+                allowClose: false
+            });
 
             // nthTabs.addTab({
             //     id: "inventory_count",
