--- a/src/main/resources/templates/modules/bom_template.html
+++ b/src/main/resources/templates/modules/bom_template.html
@@ -102,7 +102,7 @@
             title: '选择物料',
             reportId: '697147523487240192',
             labelDisplay: function (row) {
-                return row.name + ' ' + (!row.characteristic ? '' : row.characteristic)
+                return row.name + ' ' + (!row.specification ? '' : row.specification)
             },
             selected: function (row) {
                 console.log(row)
@@ -174,7 +174,7 @@
                     params: {categoryId: "717389543182962688"}, // 成品物料
                     required: true,
                     labelDisplay: function (row) {
-                        return row.name + ' ' + (!row.characteristic ? '' : row.characteristic)
+                        return row.name + ' ' + (!row.specification ? '' : row.specification)
                     },
                     selected: function (row) {
                         console.log(row)
