--- a/src/main/resources/templates/modules/inventory/warning.html
+++ b/src/main/resources/templates/modules/inventory/warning.html
@@ -173,7 +173,7 @@
             value: urlObject.material_id,
             reportId: '697147523487240192',
             labelDisplay: function (row) {
-                return row.name + ' ' + (!row.characteristic ? '' : row.characteristic)
+                return row.name + ' ' + (!row.specification ? '' : row.specification)
             },
             selected: function () {
                 $('.query-form-container button[name=search]').click()
