--- a/src/main/resources/templates/modules/purchase/purchase_order_batch.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order_batch.html
@@ -65,6 +65,7 @@
 
         <div id="dialogInput" style="display: none"></div>
         <div id="multipleDialogInput" style="display: none"></div>
+        <sp:select class="hidden" id="color"  key="COLOR" emptyItemText/>
         <div class="operator-bar text-center" id="operator-bar" sec:authorize="${hasAuthority('pur_purchase_order_add') or hasAuthority('pur_purchase_order_edit')}">
             <button class="btn btn-primary" type="button" name="send" onclick="send()">
                 <i class="fa fa-send"></i> 提交</button>
@@ -112,6 +113,10 @@
             allowEmpty: false, // 表格允许为空
             columnConfigs: [
                 {
+                    type: "hidden",
+                    name: "batchCode"
+                },
+                {
                     type: "material",
                     name: "materialId",
                     title: "物料",
@@ -127,8 +132,13 @@
                                         $tr.find(':input[name=partnerId]').html(res[row.id].map(d => {
                                             return '<option value="'+d.name+'">'+d.label+'</option>'
                                         }).join(''))
-                                        $tr = $tr.next()
                                     }
+
+                                    $tr.find(':input[name=color]')
+                                        .attr('disabled', !row.batchManagement)
+                                        .attr('readonly', !row.batchManagement)
+
+                                    $tr = $tr.next()
                                 }
                             })
                         } else {
@@ -138,6 +148,10 @@
                                     return '<option value="'+d.name+'">'+d.label+'</option>'
                                 }).join(''))
                             })
+
+                            $tr.find(':input[name=color]')
+                                .attr('disabled', !value.batchManagement)
+                                .attr('readonly', !value.batchManagement)
                         }
                     }
                 },
@@ -145,6 +159,15 @@
                     type: "label",
                     name: "materialText",
                     title: "规格"
+                },
+                {
+                    type: "select",
+                    name: "color",
+                    width: 100,
+                    title: "颜色",
+                    datasource: $('#color'),
+                    required: true,
+                    disabled: true
                 },
                 {
                     type: "decimal",
@@ -248,6 +271,18 @@
 
             var params = $('#form-header').form2json({allowEmptyMultiVal:true})
             params['itemList'] = $editableTable.editableTablePlus('getValue')
+            for (let item of params['itemList']) {
+                if (item.color) {
+                    let res = [];
+                    for (let i = 0; i < item.color.length; i++) {
+                        res[i] = ("00" + item.color.charCodeAt(i).toString(16)).slice(-4);
+                    }
+
+                    item.batchCode = res.join("")
+                } else {
+                    item.batchCode = null
+                }
+            }
             console.log(params)
 
             $.ajax({
