--- a/src/main/resources/templates/demos/table.html
+++ b/src/main/resources/templates/demos/table.html
@@ -189,7 +189,7 @@
             name: 'material_id',
             reportId: '697147523487240192',
             labelDisplay: function (row) {
-                return row.name + ' ' + (!row.characteristic ? '' : row.characteristic)
+                return row.name + ' ' + (!row.specification ? '' : row.specification)
             },
             selected: function (row) {
                 console.log(row)
