--- a/src/main/resources/templates/modules/bom.html
+++ b/src/main/resources/templates/modules/bom.html
@@ -101,7 +101,7 @@
             reportId: '697147523487240192',
             required: true,
             labelDisplay: function (row) {
-                return row.name + ' ' + (!row.characteristic ? '' : row.characteristic)
+                return row.name + ' ' + (!row.specification ? '' : row.specification)
             },
             selected: function (row) {
                 console.log(row)
@@ -242,7 +242,7 @@
             title: '选择物料',
             reportId: '697147523487240192',
             labelDisplay: function (row) {
-                return row.name + ' ' + (!row.characteristic ? '' : row.characteristic)
+                return row.name + ' ' + (!row.specification ? '' : row.specification)
             },
             selected: function (row) {
                 console.log(row)
@@ -272,7 +272,7 @@
             reportId: '697147523487240192',
             mode: 'multiple', // 多选
             labelDisplay: function (row) {
-                return row.name + ' ' + (!row.characteristic ? '' : row.characteristic)
+                return row.name + ' ' + (!row.specification ? '' : row.specification)
             },
             selected: function (rows) {
                 for (let row of rows) {
