--- a/src/main/resources/templates/modules/bom_template2.html
+++ b/src/main/resources/templates/modules/bom_template2.html
@@ -107,7 +107,7 @@
             title: '选择物料',
             reportId: '697147523487240192',
             labelDisplay: function (row) {
-                return row.name + ' ' + (!row.characteristic ? '' : row.characteristic)
+                return row.name + ' ' + (!row.specification ? '' : row.specification)
             },
             selected: function (row) {
                 console.log(row)
@@ -180,7 +180,7 @@
                     params: {categoryId: "717389543182962688"},
                     required: true,
                     labelDisplay: function (row) {
-                        return row.name + ' ' + (!row.characteristic ? '' : row.characteristic)
+                        return row.name + ' ' + (!row.specification ? '' : row.specification)
                     },
                     selected: function (row) {
                         console.log(row)
