--- a/src/main/resources/templates/modules/inventory/count.html
+++ b/src/main/resources/templates/modules/inventory/count.html
@@ -61,6 +61,7 @@
         </div>
         <div id="dialogInput" style="display: none"></div>
         <div id="multipleDialogInput" style="display: none"></div>
+        <sp:select class="hidden" id="color"  key="COLOR" emptyItemText/>
         <div class="operator-bar text-center" id="operator-bar">
             <button class="btn btn-primary" type="button" name="send" onclick="send()">
                 <i class="fa fa-send"></i> 提交</button>
@@ -89,17 +90,44 @@
             allowEmpty: false, // 表格允许为空
             columnConfigs: [
                 {
+                    type: "hidden",
+                    name: "batchCode"
+                },
+                {
                     type: "material",
                     name: "materialId",
                     title: "物料",
                     width: 100,
                     required: true,
                     mode: 'multiple', // 多选
+                    selected: function ($tr, value) {
+                        if (Array.isArray(value)) {
+                            for (let row of value) {
+                                $tr.find(':input[name=color]')
+                                    .attr('disabled', !row.batchManagement)
+                                    .attr('readonly', !row.batchManagement)
+                                $tr = $tr.next()
+                            }
+                        } else {
+                            $tr.find(':input[name=color]')
+                                .attr('disabled', !value.batchManagement)
+                                .attr('readonly', !value.batchManagement)
+                        }
+                    }
                 },
                 {
                     type: "label",
                     name: "materialText",
                     title: "规格"
+                },
+                {
+                    type: "select",
+                    name: "color",
+                    width: 100,
+                    title: "颜色",
+                    datasource: $('#color'),
+                    required: true,
+                    disabled: true
                 },
                 {
                     type: "decimal",
@@ -163,6 +191,18 @@
             params = $.extend({},
                 params, $('#form-header').form2json({allowEmptyMultiVal:true})); //合并参数
 
+            for (let item of params['itemList']) {
+                if (item.color) {
+                    let res = [];
+                    for (let i = 0; i < item.color.length; i++) {
+                        res[i] = ("00" + item.color.charCodeAt(i).toString(16)).slice(-4);
+                    }
+
+                    item.batchCode = res.join("")
+                } else {
+                    item.batchCode = null
+                }
+            }
             console.log(params)
 
             params.code = '1' // 临时code
@@ -179,6 +219,7 @@
                     }
                     toastr.success('盘点完成！' + msg);
                     reset()
+                    reloadTab('inventory_list')
                 }
             });
         }
