chore: produce 30% processed

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -269,12 +269,12 @@
             //     allowClose: false
             // });
 
-            nthTabs.addTab({
-                id: "inventory_move",
-                title: '库存移动',
-                url: "/inventory/move",
-                allowClose: false
-            });
+            // nthTabs.addTab({
+            //     id: "inventory_move",
+            //     title: '库存移动',
+            //     url: "/inventory/move",
+            //     allowClose: false
+            // });
 
             // nthTabs.addTab({
             //     id: "inventory_count",
@@ -332,12 +332,12 @@
             //     allowClose: false
             // });
 
-            // nthTabs.addTab({
-            //     id: "produce_orders",
-            //     title: '生产单',
-            //     url: "/produce_orders/new",
-            //     allowClose: false
-            // });
+            nthTabs.addTab({
+                id: "produce_orders",
+                title: '生产单',
+                url: "/produce_orders/new",
+                allowClose: false
+            });
 
             // nthTabs.addTab({
             //     id: "core_partner",
