--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -286,7 +286,7 @@
                 // }
             ],
             value, // 初始化值
-            rowClick: function ($tr, row) {
+            rowClick: function (context, $tr, row) {
                 console.log(row)
             }
         })
